--- a/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/Frequentist Inference Case Study - Part A (3).ipynb
@@ -1724,28 +1724,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t-critical = t.pdf(1-(1-0.95)/2, 49)\n",
-    "\n",
-    "margin_of_error_t = "
+    "t_critical = t.pdf(1-(1-0.95)/2, 49)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "margin_of_error_t = t_critical*standard_error"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.63584285688418, 172.9271788584734)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confidence_interval_t = (new_sample_mean - margin_of_error_t, new_sample_mean + margin_of_error_t)\n",
+    "\n",
+    "confidence_interval_t"
+   ]
   },
   {
    "cell_type": "markdown",
